first website done

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,70 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+.orange-highlight{
     color: #FAA523;
+}
+.first-half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.first-half-width img{
+    width: 100%;
+    padding: 15px 5px;
+}
+.link-btn{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,#eccb96,#FFAE2B);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 700;
+}
+.top-banner{
+    background-image: url(../images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 200px;
+}
+.dream-area{
+    background-image: url(../images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.single-exp{
+    box-shadow: 10px 10px 40px gray ;
+    border-radius: 5px;
+    height: 80%;
+    background-color: #fff;
+}
+.experience-area{
+    background-image: url(../images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stact{
+    border-left: 7px solid;
+    border-image: linear-gradient(45deg,lightsalmon,tomato);
+    border-image-slice: 1;
+}
+#baby-dev{
+    border-left:7px solid;
+    border-image: linear-gradient(45deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align:center;
 }
